Move icons to /static and improve neofetch

--- a/webos-desktop/src/style.css
+++ b/webos-desktop/src/style.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   height: 100vh;
   background: url("/static/wallpapers/wallpaper2.webp") no-repeat center center fixed;
-  cursor: url("/icons/cursor.png");
+  cursor: url("/static/icons/cursor.png");
   background-size: cover;
   overflow: hidden;
   font-family: "Segoe UI", Tahoma, sans-serif;
