--- a/webos-desktop/src/style.css
+++ b/webos-desktop/src/style.css
@@ -691,3 +691,12 @@ body {
 .window-controls .close-btn:hover svg {
   fill: #fff;
 }
+
+.star {
+  cursor: "pointer";
+  position: "absolute";
+  right: "10px";
+  top: "50%";
+  transform: "translateY(-50%)";
+  font-size: "16px";
+}
